--- a/afd.cabal
+++ b/afd.cabal
@@ -1,26 +1,37 @@
 name:                afd
 version:             0.0.0.0
 synopsis:            Gathering data on Wikipedia Articles for Deletion.
--- description:         Gathering data on Wikipedia Articles for Deletion.
+description:         Gathering data on Wikipedia Articles for Deletion.
 license:             Apache-2.0
 license-file:        LICENSE
 author:              Eric Rochester
 maintainer:          erochest@gmail.com
--- copyright:           2016 Eric Rochester
--- category:
+copyright:           2016 Eric Rochester
+category:            Data
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     ArticlesDel.Actions.Init
+  exposed-modules:     ArticlesDel.Actions.ImportXml
+                     , ArticlesDel.Actions.Init
                      , ArticlesDel.Types
-  other-modules:       ArticlesDel.Types.Internal
+                     , ArticlesDel.Utils
+  other-modules:       ArticlesDel.Actions.ImportXml.Types
+                     , ArticlesDel.Types.Internal
   -- other-extensions:
   build-depends:       base >=4.8 && <4.9
                      , aeson
+                     , bifunctors
+                     , bytestring
+                     , conduit
+                     , conduit-combinators
+                     , conduit-extra
+                     , containers
                      , errors
+                     , foldl
                      , lens
+                     , monad-logger
                      , persistent
                      , persistent-sqlite
                      , persistent-template
@@ -28,6 +39,9 @@ library
                      , text-format
                      , time
                      , transformers
+                     , unordered-containers
+                     , xml-conduit
+                     , xml-types
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -44,8 +58,7 @@ executable afd
                      , optparse-applicative
                      , errors
   hs-source-dirs:      app
-  ghc-options:         -O2
-                       -threaded
+  ghc-options:         -threaded
                        -rtsopts
                        "-with-rtsopts=-N"
                        -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
@@ -69,8 +82,7 @@ test-suite afd-specs
 
 benchmark afd-bench
   type:                exitcode-stdio-1.0
-  ghc-options:         -O2
-                       -threaded
+  ghc-options:         -threaded
                        -rtsopts
   hs-source-dirs:      bench
   main-is:             Bench.hs
